--- a/Main.storyboard
+++ b/Main.storyboard
@@ -942,11 +942,11 @@
                         <viewControllerLayoutGuide type="bottom" id="gp5-S5-Mjd"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="awI-tF-GCi">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="672"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pID-rw-97s">
-                                <rect key="frame" x="20" y="84" width="374" height="300"/>
+                                <rect key="frame" x="20" y="20" width="374" height="300"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="300" id="kpx-te-7Wi"/>
@@ -964,7 +964,7 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0xZ-b8-ofL">
-                                <rect key="frame" x="20" y="672" width="374" height="44"/>
+                                <rect key="frame" x="20" y="564" width="374" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="vo8-LT-FEs"/>
                                 </constraints>
@@ -1385,6 +1385,7 @@
                     <connections>
                         <outlet property="signatureSwitch" destination="JQy-W2-Y9J" id="hpr-lq-0uK"/>
                         <outlet property="topThreadPostSwitch" destination="SLt-Pz-mnF" id="gdU-LJ-gbp"/>
+                        <outlet property="version" destination="VBb-n4-Xu9" id="FRi-mk-IJE"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Lat-ag-NPT" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -3487,7 +3488,7 @@
         <segue reference="wLO-He-BF0"/>
         <segue reference="Ysv-Xy-VAF"/>
         <segue reference="FiC-V2-LqH"/>
-        <segue reference="UB6-76-MCr"/>
+        <segue reference="hla-BN-cvQ"/>
         <segue reference="tJd-yI-EGE"/>
         <segue reference="BtX-d5-2Dd"/>
     </inferredMetricsTieBreakers>
